# HomeStock

./: .gitignore  Extract.py  NSEDataDownloader.py  NewOPExcel.py  README.md  Unzip.py  electron-builder.yml  package-lock.json  package.json  script.py  tailwind.config.js  vite.config.js
assets/: README.md
backend/: Makefile  build_backend.spec  pyproject.toml  pytest.ini  start_server.py  test_api.sh  test_download.sh
backend/app/: main.py
backend/app/api/: download.py  logs.py  parse.py  pipeline.py  run_full.py  settings.py
backend/app/services/: database.py  download_service.py  excel_service.py  parse_service.py  pipeline_service.py  rate_limiter.py  scheduler_service.py  utils.py  verification_service.py
backend/tests/: conftest.py  test_database.py  test_download.py  test_health.py  test_logs.py  test_parse.py  test_pipeline.py  test_rate_limiter.py  test_run_full.py  test_settings.py  test_verification.py
docs/: API_TEST_RESULTS.md  DEVELOPMENT.md  FRONTEND_ARCHITECTURE.md  FRONTEND_BACKEND_GUIDE.md  NSE_FILES_README.md  PACKAGING.md  PIPELINE_DOCUMENTATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_TESTS.md  TESTING_GUIDE.md
electron/: main.js  preload.js
electron/renderer/: App.jsx  index.css  index.html
electron/renderer/components/: Button.jsx  FormInput.jsx  Sidebar.jsx  StatusCard.jsx  StatusMessage.jsx
electron/renderer/pages/: Dashboard.jsx  Downloads.jsx  Logs.jsx  Parser.jsx  Settings.jsx
electron/renderer/services/: api.js
mobile/: App.jsx  README.md  package.json
scripts/: build_backend.bat  build_backend.js  build_backend.sh  check_prerequisites.js  setup.bat  setup.sh
