[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "homestock-backend"
version = "1.0.0"
description = "HomeStock NSE Automation Backend API"
readme = "../README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "HomeStock", email = "homestock@example.com" }]
license = { text = "MIT" }

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "pydantic==2.5.0",
    "python-dateutil==2.8.2",
    "schedule==1.2.0",
    "pandas==2.1.3",
    "openpyxl==3.1.2",
    "ratelimit==2.2.1",
    "httpx==0.25.2",
    "xlrd==2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-xdist==3.6.1",
    "ruff>=0.14.4",
    "pyright>=1.1.0",
]
build = ["pyinstaller==6.3.0"]

[project.scripts]
homestock-server = "app.main:app"

# ======================================================================
# Ruff — unified formatter and linter
# ======================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app", "tests"]

exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "dist",
    "build",
    "__pycache__",
    "*.pyc",
    "*.md",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
    "D",   # pydocstyle
]

ignore = [
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D106",    # Missing docstring in public nested class
    "D107",    # Missing docstring in __init__
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "D205",    # 1 blank line required between summary line and description
    "D415",    # First line should end with punctuation
    "PLR0913", # Too many arguments
    "PLC0414", # Import alias does not rename original package
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function calls in argument defaults
    "B904",    # Allow `raise` without specifying exception in `except`
    "ERA001",  # Commented-out code
    "G201",    # Logging `.exception()` should be used instead of `.error(..., exc_info=True)`
    "PTH123",  # open() should be replaced by Path.open()
    "SIM108",  # Use ternary operator
    "RUF013",  # PEP 484 prohibits implicit Optional
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import outside toplevel
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"] # Unused imports, import *
"**/tests/**/*.py" = [
    "S101",    # Use of `assert` detected
    "ARG",     # Unused function argument
    "E712",    # Comparisons to True/False in tests
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import outside toplevel
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ======================================================================
# Pyright — type checker
# ======================================================================

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/__pycache__", "**/venv", "**/.venv", "**/dist", "**/build"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true

reportGeneralTypeIssues = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalOperand = "error"
reportOptionalContextManager = "error"
reportTypedDictNotRequiredAccess = "error"
reportPrivateImportUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleVariableOverride = "error"
reportIncompatibleMethodOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "error"

reportAny = false
reportExplicitAny = false
reportMissingTypeArgument = "warning"
reportMissingModuleSource = "none"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"

# ======================================================================
# Pytest
# ======================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "e2e: End-to-end tests",
    "integration: Integration tests",
    "unit: Unit tests",
]
